--- a/index.html
+++ b/index.html
@@ -6,5 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Semantic HTML Website</title>
   </head>
-  <body></body>
+  <body>
+    <!-- header  -->
+    <header>
+      <img
+        src="./images/html picture.jpg"
+        alt="a picture of html letters on square pieces"
+        width="300"
+      />
+      <h1>A Website of Semantic Elements</h1>
+      <p>Inspect this website to see the different elements</p>
+    </header>
+    <!-- nav bar -->
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">About</a>
+    </nav>
+  </body>
 </html>
