--- a/index.html
+++ b/index.html
@@ -22,5 +22,50 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
     </nav>
+    <!-- add main -->
+    <main>
+      <header><h2>Why use semantic elements?</h2></header>
+      <section>
+        <header><h3>Top Five Reasons</h3></header>
+        <p>click to view</p>
+      </section>
+      <section>
+        <details>
+          <summary>Meaningful</summary>
+          <p>html should provide meaning when looked at</p>
+        </details>
+        <details>
+          <summary>Div and Span</summary>
+          <p>
+            div and span can be use sparingly but can be overused very quickly,
+            providing no meaning to large documents of code
+          </p>
+        </details>
+        <details>
+          <summary>Screen Reader Friendly</summary>
+          <p>
+            screen readers rely on semantically-rich HTML to process web pages
+            and help users with low vision navigate them. Semantic tags tell
+            screen reader users where they are and how they can interact with
+            the current page
+          </p>
+        </details>
+        <details>
+          <summary>Search Engines</summary>
+          <p>search engines can identify what the website is about eaiser</p>
+          <p>
+            makes crawl bots happy, because non semantic webpages is usually
+            ignored by search engines
+          </p>
+        </details>
+        <details>
+          <summary>Developer Sanity</summary>
+          <p>
+            easier to work on when tags give more meaning to user trying to
+            understand how pieces are interacting
+          </p>
+        </details>
+      </section>
+    </main>
   </body>
 </html>
