--- a/index.html
+++ b/index.html
@@ -67,5 +67,25 @@
         </details>
       </section>
     </main>
+    <!-- article -->
+    <article>
+      <header><h2>Links to Articles</h2></header>
+      <ul>
+        <li>
+          <a
+            href="https://developer.mozilla.org/en-US/docs/Glossary/Semantics"
+            target="_blank"
+            >MDN Docs</a
+          >
+        </li>
+        <li>
+          <a
+            href="https://www.w3schools.com/html/html5_semantic_elements.asp"
+            target="_blank"
+            >w3Schools</a
+          >
+        </li>
+      </ul>
+    </article>
   </body>
 </html>
