--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
     </nav>
-    <!-- add main -->
+    <!-- main -->
     <main>
       <header><h2>Why use semantic elements?</h2></header>
       <section>
@@ -87,5 +87,14 @@
         </li>
       </ul>
     </article>
+    <!-- aside -->
+    <aside>
+      <header><h3>Top Browsers</h3></header>
+      <ol>
+        <li>Chrome</li>
+        <li>Mozilla</li>
+        <li>Edge</li>
+      </ol>
+    </aside>
   </body>
 </html>
