--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         src="./images/html picture.jpg"
         alt="a picture of html letters on square pieces"
         width="300"
+        id="top"
       />
       <h1>A Website of Semantic Elements</h1>
       <p>Inspect this website to see the different elements</p>
@@ -22,7 +23,7 @@
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
     </nav>
-    <!-- main -->
+    <!-- main & section -->
     <main>
       <header><h2>Why use semantic elements?</h2></header>
       <section>
@@ -96,5 +97,9 @@
         <li>Edge</li>
       </ol>
     </aside>
+    <!-- footer -->
+    <footer>
+      <p><a href="#top">Back to Top</a></p>
+    </footer>
   </body>
 </html>
